Added pages with calculations

--- a/pages/area-triangle/area-triangle.html
+++ b/pages/area-triangle/area-triangle.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area of Triangle</title>
     <link rel="stylesheet" href="../../style.css">
-    <script src="./area-trianlge.js" defer></script>
+    <script src="./area-triangle.js" defer></script>
 </head>
 <body>
 
@@ -20,11 +20,28 @@
         </div>
     </nav>
 
-    <!-- <footer id="footer" class="social-links">
+    <main>
+        <h1>Calculate Area of a triangle</h1>
+        <p>Area of a triangle - <span>1/2(Base * Height)</span></p>
+        <div class="base">
+            <label for="base-value">Enter base</label>
+            <input id="base-value" type="number">
+        </div>
+        <div class="height">
+            <label for="height-value">Enter height</label>
+            <input id="height-value" type="number">
+        </div>
+
+        <button class="calulate-btn">Calculate</button>
+
+        <p id="output-message"></p>
+    </main>
+
+    <footer id="footer" class="social-links">
         <a href="https://github.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/github.svg" alt="github"></a>
         <a href="https://twitter.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/twitter.svg" alt="twitter"></a>
         <a href="https://www.linkedin.com/in/abhishake12/" target="_blank"><img class="social-icons" src="../../Images/social-icons/linkedin.svg" alt="linkedin"></a>
-    </footer> -->
+    </footer>
     
 </body>
 </html>
