--- a/pages/hypotenuse/hypotenuse.html
+++ b/pages/hypotenuse/hypotenuse.html
@@ -20,11 +20,28 @@
         </div>
     </nav>
 
-    <!-- <footer id="footer" class="social-links">
+    <main>
+        <h1>Calculate Hypotenuse of a triangle</h1>
+        <p>Hypotenuse formula - <span>√(base² + height²)</span></p>
+        <div class="base-a">
+            <label for="base-value-a">Enter base value (a)</label>
+            <input id="base-value-a" type="number">
+        </div>
+        <div class="base-b">
+            <label for="base-value-b">Enter base value (b)</label>
+            <input id="base-value-b" type="number">
+        </div>
+
+        <button class="calulate-btn">Calculate</button>
+
+        <p id="output-message"></p>
+    </main>
+
+    <footer id="footer" class="social-links">
         <a href="https://github.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/github.svg" alt="github"></a>
         <a href="https://twitter.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/twitter.svg" alt="twitter"></a>
         <a href="https://www.linkedin.com/in/abhishake12/" target="_blank"><img class="social-icons" src="../../Images/social-icons/linkedin.svg" alt="linkedin"></a>
-    </footer> -->
+    </footer>
     
 </body>
 </html>
