--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -31,50 +31,55 @@
             </div>
             <div class="question-container">
                 <p>If a triangle has an angle of 90 degrees, what is it called ?</p>
-                <label><input type="radio" name="question-2" value="Obtuse">Obtuse</label>
-                <label><input type="radio" name="question-2" value="Acute">Acute</label>
-                <label><input type="radio" name="question-2" value="Right">Right</label>
+                <label><input type="radio" name="question-2" value="Obtuse Angle">Obtuse Angle</label>
+                <label><input type="radio" name="question-2" value="Acute Angle">Acute Angle</label>
+                <label><input type="radio" name="question-2" value="Right Angle">Right Angle</label>
             </div>
             <div class="question-container">
                 <p>Which of the following can form a right angled triangle ?</p>
-                <label><input type="radio" name="question-4" value="14, 15, 26">14, 15, 26</label>
-                <label><input type="radio" name="question-4" value="12, 16, 20">12, 16, 20</label>
+                <label><input type="radio" name="question-3" value="14, 15, 26">14, 15, 26</label>
+                <label><input type="radio" name="question-3" value="12, 16, 20">12, 16, 20</label>
             </div>
             <div class="question-container">
                 <p>Which of the following triangles are always similar ?</p>
-                <label><input type="radio" name="question-5" value="Equilateral triangle">Equilateral triangle</label>
-                <label><input type="radio" name="question-5" value="Isosceles triangle">Isosceles triangle</label>
+                <label><input type="radio" name="question-4" value="Equilateral triangle">Equilateral triangle</label>
+                <label><input type="radio" name="question-4" value="Isosceles triangle">Isosceles triangle</label>
             </div>
             <div class="question-container">
                 <p>If one angle of a triangle is obtuse, then which one of the following is the possible measure of remaining angles ?</p>
-                <label><input type="radio" name="question-6" value="100°">100°</label>
-                <label><input type="radio" name="question-6" value="85°">85°</label>
+                <label><input type="radio" name="question-5" value="100°">100°</label>
+                <label><input type="radio" name="question-5" value="85°">85°</label>
             </div>
             <div class="question-container">
                 <p>If the largest angle in a triangle is 70°, what is the least possible value of the smallest angle of the triangle ?</p>
-                <label><input type="radio" name="question-7" value="30°">30°</label>
-                <label><input type="radio" name="question-7" value="10°">10°</label>
+                <label><input type="radio" name="question-6" value="30°">30°</label>
+                <label><input type="radio" name="question-6" value="10°">10°</label>
             </div>
             <div class="question-container">
                 <p>The perimeter of scalene triangle with sides a, b, c is ...</p>
-                <label><input type="radio" name="question-8" value="a + b + c">a + b + c</label>
-                <label><input type="radio" name="question-8" value="2a">2a</label>
-                <label><input type="radio" name="question-8" value="None of these">None of these</label>
+                <label><input type="radio" name="question-7" value="a + b + c">a + b + c</label>
+                <label><input type="radio" name="question-7" value="2a">2a</label>
+                <label><input type="radio" name="question-7" value="None of these">None of these</label>
             </div>
             <div class="question-container">
                 <p>There is a right triangle PQR where: angle Q = 90°; angle P = angle R. What is the measure of angles P and R ?</p>
-                <label><input type="radio" name="question-10" value="55°">55°</label>
-                <label><input type="radio" name="question-10" value="65°">65°</label>
-                <label><input type="radio" name="question-10" value="45°">45°</label>
+                <label><input type="radio" name="question-8" value="55°">55°</label>
+                <label><input type="radio" name="question-8" value="65°">65°</label>
+                <label><input type="radio" name="question-8" value="45°">45°</label>
             </div>
         </form>
+
+        <button id="submit-btn">Submit</button>
+
+        <p id="output-message"></p>
+
     </main>
 
-    <!-- <footer id="footer" class="social-links">
+    <footer id="footer" class="social-links">
         <a href="https://github.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/github.svg" alt="github"></a>
         <a href="https://twitter.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/twitter.svg" alt="twitter"></a>
         <a href="https://www.linkedin.com/in/abhishake12/" target="_blank"><img class="social-icons" src="../../Images/social-icons/linkedin.svg" alt="linkedin"></a>
-    </footer> -->
+    </footer>
     
 </body>
 </html>
