Updated class names

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
     </nav>
 
     <main>
-        <h1 class="heading">Enter angles in degress</h1>
-        <div class="angel-1">
+        <h1 class="heading">Enter angles in degree</h1>
+        <div class="divider"></div>
+        <div class="input-container">
             <label for="angle-1">Angle 1</label>
             <input id="angle-1" type="number" class="angles">
         </div>
-        <div class="angel-2">
+        <div class="input-container">
             <label for="angle-2">Angle 2</label>
             <input id="angle-2" type="number" class="angles">
         </div>
-        <div class="angel-3">
+        <div class="input-container">
             <label for="angle-3">Angle 3</label>
             <input id="angle-3" type="number" class="angles">
         </div>
@@ -39,16 +40,16 @@
 
         <div class="divider"></div>
 
-        <p class="message"></p>
-        <img class="gif">
+        <p id="output-message"></p>
 
+        <img class="gif">
     </main>
 
-    <!-- <footer id="footer" class="social-links">
+    <footer id="footer" class="social-links">
         <a href="https://github.com/abhishake21" target="_blank"><img class="social-icons" src="images/social-icons/github.svg" alt="github"></a>
         <a href="https://twitter.com/abhishake21" target="_blank"><img class="social-icons" src="images/social-icons/twitter.svg" alt="twitter"></a>
         <a href="https://www.linkedin.com/in/abhishake12/" target="_blank"><img class="social-icons" src="images/social-icons/linkedin.svg" alt="linkedin"></a>
-    </footer> -->
+    </footer>
 
 </body>
 </html>
