--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -13,56 +13,57 @@
     <nav class="nav-bar">
         <h1><a href="../../index.html" class="nav-heading">Fun with Triangles</a></h1>
         <div class="nav-links">
-            <a class="link link-active" href="../../index.html">Is Triangle?</a>
-            <a class="link" href="../quiz/quiz.html">Quiz</a>
+            <a class="link" href="../../index.html">Is Triangle?</a>
+            <a class="link link-active" href="../quiz/quiz.html">Quiz</a>
             <a class="link" href="../hypotenuse/hypotenuse.html">Hypotenuse</a>
             <a class="link" href="../area-triangle/area-triangle.html">Area of Triangle</a>
         </div>
     </nav>
 
     <main>
-        <h1>Triangle Quiz</h1>
+        <h1 class="heading">Triangle Quiz</h1>
+        <div class="divider"></div>
         <form class="quiz-form">
             <div class="question-container">
-                <p>1. What is the third angle for the triangle where angle1 = 45° and angle2 = 45° ?</p>
+                <p class="question">What is the third angle for the triangle where angle1 = 45° and angle2 = 45° ?</p>
                 <label><input type="radio" name="question-1" value="45°">45°</label>
                 <label><input type="radio" name="question-1" value="90°">90°</label>
                 <label><input type="radio" name="question-1" value="60°">60°</label>
             </div>
             <div class="question-container">
-                <p>If a triangle has an angle of 90 degrees, what is it called ?</p>
+                <p class="question">If a triangle has an angle of 90 degrees, what is it called ?</p>
                 <label><input type="radio" name="question-2" value="Obtuse Angle">Obtuse Angle</label>
                 <label><input type="radio" name="question-2" value="Acute Angle">Acute Angle</label>
                 <label><input type="radio" name="question-2" value="Right Angle">Right Angle</label>
             </div>
             <div class="question-container">
-                <p>Which of the following can form a right angled triangle ?</p>
+                <p class="question">Which of the following can form a right angled triangle ?</p>
                 <label><input type="radio" name="question-3" value="14, 15, 26">14, 15, 26</label>
                 <label><input type="radio" name="question-3" value="12, 16, 20">12, 16, 20</label>
             </div>
             <div class="question-container">
-                <p>Which of the following triangles are always similar ?</p>
+                <p class="question">Which of the following triangles are always similar ?</p>
                 <label><input type="radio" name="question-4" value="Equilateral triangle">Equilateral triangle</label>
                 <label><input type="radio" name="question-4" value="Isosceles triangle">Isosceles triangle</label>
             </div>
             <div class="question-container">
-                <p>If one angle of a triangle is obtuse, then which one of the following is the possible measure of remaining angles ?</p>
+                <p class="question">If one angle of a triangle is obtuse, then which one of the following is the possible measure of remaining angles ?</p>
                 <label><input type="radio" name="question-5" value="100°">100°</label>
                 <label><input type="radio" name="question-5" value="85°">85°</label>
             </div>
             <div class="question-container">
-                <p>If the largest angle in a triangle is 70°, what is the least possible value of the smallest angle of the triangle ?</p>
+                <p class="question">If the largest angle in a triangle is 70°, what is the least possible value of the smallest angle of the triangle ?</p>
                 <label><input type="radio" name="question-6" value="30°">30°</label>
                 <label><input type="radio" name="question-6" value="10°">10°</label>
             </div>
             <div class="question-container">
-                <p>The perimeter of scalene triangle with sides a, b, c is ...</p>
+                <p class="question">The perimeter of scalene triangle with sides a, b, c is ...</p>
                 <label><input type="radio" name="question-7" value="a + b + c">a + b + c</label>
                 <label><input type="radio" name="question-7" value="2a">2a</label>
                 <label><input type="radio" name="question-7" value="None of these">None of these</label>
             </div>
             <div class="question-container">
-                <p>There is a right triangle PQR where: angle Q = 90°; angle P = angle R. What is the measure of angles P and R ?</p>
+                <p class="question">There is a right triangle PQR where: angle Q = 90°; angle P = angle R. What is the measure of angles P and R ?</p>
                 <label><input type="radio" name="question-8" value="55°">55°</label>
                 <label><input type="radio" name="question-8" value="65°">65°</label>
                 <label><input type="radio" name="question-8" value="45°">45°</label>
@@ -71,7 +72,7 @@
 
         <button id="submit-btn">Submit</button>
 
-        <p id="output-message"></p>
+        <p class="quiz-score"></p>
 
     </main>
 
