--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <nav class="nav-bar">
         <h1><a href="./index.html" class="nav-heading">Fun with Triangles</a></h1>
+        <div class="title-divider"></div>
         <div class="nav-links">
             <a class="link link-active" href="./index.html">Is Triangle?</a>
             <a class="link" href="./pages/quiz/quiz.html">Quiz</a>
