--- a/pages/area-triangle/area-triangle.html
+++ b/pages/area-triangle/area-triangle.html
@@ -12,6 +12,7 @@
 
     <nav class="nav-bar">
         <h1><a href="../../index.html" class="nav-heading">Fun with Triangles</a></h1>
+        <div class="title-divider"></div>
         <div class="nav-links">
             <a class="link" href="../../index.html">Is Triangle?</a>
             <a class="link" href="../quiz/quiz.html">Quiz</a>
@@ -21,7 +22,7 @@
     </nav>
 
     <main>
-        <h1 class="heading">Calculate Area of a triangle</h1>
+        <h1 class="heading">Area of a triangle</h1>
         <p class="formula">Area of a triangle = <span>1/2(Base * Height)</span></p>
         <div class="divider"></div>
         <div class="input-container base">
