--- a/pages/hypotenuse/hypotenuse.html
+++ b/pages/hypotenuse/hypotenuse.html
@@ -12,6 +12,7 @@
 
     <nav class="nav-bar">
         <h1><a href="../../index.html" class="nav-heading">Fun with Triangles</a></h1>
+        <div class="title-divider"></div>
         <div class="nav-links">
             <a class="link" href="../../index.html">Is Triangle?</a>
             <a class="link" href="../quiz/quiz.html">Quiz</a>
@@ -21,7 +22,7 @@
     </nav>
 
     <main>
-        <h1 class="heading">Calculate Hypotenuse of a triangle</h1>
+        <h1 class="heading">Hypotenuse of a triangle</h1>
         <p class="formula">Hypotenuse formula = <span>sqrt(a² + b²)</span></p>
         <div class="divider"></div>
         <div class="input-container base-a">
