--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -12,6 +12,7 @@
 
     <nav class="nav-bar">
         <h1><a href="../../index.html" class="nav-heading">Fun with Triangles</a></h1>
+        <div class="title-divider"></div>
         <div class="nav-links">
             <a class="link" href="../../index.html">Is Triangle?</a>
             <a class="link link-active" href="../quiz/quiz.html">Quiz</a>
