Added gifs for faster loading

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
         <p id="output-message"></p>
 
-        <img class="gif">
+        <img src="./Images/triangle.gif" class="gif triangle-gif" alt="Glowing triangle">
+        <img src="./Images/not-triangle.gif" class="gif not-triangle-gif" alt="Weird shape morphing">
     </main>
 
     <footer id="footer" class="social-links">
