--- a/pages/quiz/index.html
+++ b/pages/quiz/index.html
@@ -15,9 +15,9 @@
         <div class="title-divider"></div>
         <div class="nav-links">
             <a class="link" href="../../index.html">Is Triangle?</a>
-            <a class="link link-active" href="../quiz/quiz.html">Quiz</a>
-            <a class="link" href="../hypotenuse/hypotenuse.html">Hypotenuse</a>
-            <a class="link" href="../area-triangle/area-triangle.html">Area of Triangle</a>
+            <a class="link link-active" href="../quiz/">Quiz</a>
+            <a class="link" href="../hypotenuse/">Hypotenuse</a>
+            <a class="link" href="../area-triangle/">Area of Triangle</a>
         </div>
     </nav>
 
@@ -80,7 +80,7 @@
     <footer id="footer" class="social-links">
         <a href="https://github.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/github.svg" alt="github"></a>
         <a href="https://twitter.com/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/twitter.svg" alt="twitter"></a>
-        <a href="https://www.linkedin.com/in/abhishake12/" target="_blank"><img class="social-icons" src="../../Images/social-icons/linkedin.svg" alt="linkedin"></a>
+        <a href="https://www.linkedin.com/in/abhishake21" target="_blank"><img class="social-icons" src="../../Images/social-icons/linkedin.svg" alt="linkedin"></a>
     </footer>
     
 </body>
