Updated linkedin URL and other links

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="title-divider"></div>
         <div class="nav-links">
             <a class="link link-active" href="./index.html">Is Triangle?</a>
-            <a class="link" href="./pages/quiz/quiz.html">Quiz</a>
-            <a class="link" href="./pages/hypotenuse/hypotenuse.html">Hypotenuse</a>
-            <a class="link" href="./pages/area-triangle/area-triangle.html">Area of Triangle</a>
+            <a class="link" href="./pages/quiz/">Quiz</a>
+            <a class="link" href="./pages/hypotenuse/">Hypotenuse</a>
+            <a class="link" href="./pages/area-triangle/">Area of Triangle</a>
         </div>
     </nav>
 
@@ -50,7 +50,7 @@
     <footer id="footer" class="social-links">
         <a href="https://github.com/abhishake21" target="_blank"><img class="social-icons" src="images/social-icons/github.svg" alt="github"></a>
         <a href="https://twitter.com/abhishake21" target="_blank"><img class="social-icons" src="images/social-icons/twitter.svg" alt="twitter"></a>
-        <a href="https://www.linkedin.com/in/abhishake21-yadav" target="_blank"><img class="social-icons" src="images/social-icons/linkedin.svg" alt="linkedin"></a>
+        <a href="https://www.linkedin.com/in/abhishake21" target="_blank"><img class="social-icons" src="images/social-icons/linkedin.svg" alt="linkedin"></a>
     </footer>
 
 </body>
