Refractor: id name changed

--- a/pages/area-triangle/index.html
+++ b/pages/area-triangle/index.html
@@ -27,11 +27,11 @@
         <div class="divider"></div>
         <div class="input-container base">
             <label for="base-value">Enter base</label>
-            <input id="base-value" type="number">
+            <input id="base-input" type="number">
         </div>
         <div class="input-container height">
             <label for="height-value">Enter height</label>
-            <input id="height-value" type="number">
+            <input id="height-input" type="number">
         </div>
 
         <button class="calculate-btn">Calculate</button>
